--- a/BookStoreManager/pom.xml
+++ b/BookStoreManager/pom.xml
@@ -7,7 +7,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<!-- 指定Maven仓库 -->
-	<repositories>
+<!-- 	<repositories>
 		<repository>
 			<id>maven</id>
 			<name>Maven Repository Switchboard</name>
@@ -29,7 +29,7 @@
 			<url>http://code.alibabatech.com/mvn/snapshots/</url>
 			<layout>default</layout>
 		</repository>
-	</repositories>
+	</repositories> -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -114,7 +114,7 @@
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-core</artifactId>
-			<version>2.3.34</version>
+			<version>2.3.4.1</version>
 			<!-- 在引入hibernate的时候放开这个,防止jar包冲突 -->
 			<exclusions>
 				<exclusion>
