--- a/BookStoreManager/src/main/resources/log4j.properties
+++ b/BookStoreManager/src/main/resources/log4j.properties
@@ -10,6 +10,7 @@ log4j.logger.java.sql.ResultSet=info
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target = System.out
+log4j.appender.fileAppender.Threshold = info
 log4j.appender.console.layout = org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern =  [%c]-%m%n
 
@@ -17,7 +18,7 @@ log4j.appender.console.layout.ConversionPattern =  [%c]-%m%n
 log4j.appender.fileAppender = org.apache.log4j.FileAppender
 log4j.appender.fileAppender.File = logs/log.log
 log4j.appender.fileAppender.Append = true
-log4j.appender.fileAppender.Threshold = DEBUG
+log4j.appender.fileAppender.Threshold = info
 log4j.appender.fileAppender.layout = org.apache.log4j.PatternLayout
 log4j.appender.fileAppender.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 
@@ -25,7 +26,7 @@ log4j.appender.fileAppender.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} 
 log4j.appender.dailyRollingFile = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dailyRollingFile.File = logs/log.log
 log4j.appender.dailyRollingFile.Append = true
-log4j.appender.dailyRollingFile.Threshold = DEBUG
+log4j.appender.dailyRollingFile.Threshold = info
 log4j.appender.dailyRollingFile.layout = org.apache.log4j.PatternLayout
 log4j.appender.dailyRollingFile.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss}  [ %t:%r ] - [ %p ]  %m%n
 
