--- a/BookStoreManager/pom.xml
+++ b/BookStoreManager/pom.xml
@@ -6,34 +6,16 @@
 	<artifactId>BookStoreManager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<!-- 指定Maven仓库 -->
-<!-- 	<repositories>
-		<repository>
-			<id>maven</id>
-			<name>Maven Repository Switchboard</name>
-			<layout>default</layout>
-			<url>http://repo1.maven.org/maven2</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>alibaba-opensource</id>
-			<name>alibaba-opensource</name>
-			<url>http://code.alibabatech.com/mvn/releases/</url>
-			<layout>default</layout>
-		</repository>
-		<repository>
-			<id>alibaba-opensource-snapshot</id>
-			<name>alibaba-opensource-snapshot</name>
-			<url>http://code.alibabatech.com/mvn/snapshots/</url>
-			<layout>default</layout>
-		</repository>
-	</repositories> -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>com.github.jjYBdx4IL.utils</groupId>
+			<artifactId>jsoup-utils</artifactId>
+			<version>1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -193,9 +175,25 @@
 			<version>2.8.1</version>
 			<scope>compile</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.9.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.8.10</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.10</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<!-- 指定源代码的路径 -->
 		<sourceDirectory>src/main/java</sourceDirectory>
