--- a/BookStoreManager/pom.xml
+++ b/BookStoreManager/pom.xml
@@ -193,6 +193,11 @@
 			<version>2.8.10</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.7</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<!-- 指定源代码的路径 -->
