--- a/BookStoreManager/pom.xml
+++ b/BookStoreManager/pom.xml
@@ -10,7 +10,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
-
 		<dependency>
 			<groupId>com.github.jjYBdx4IL.utils</groupId>
 			<artifactId>jsoup-utils</artifactId>
@@ -154,6 +153,18 @@
 			<artifactId>tomcat-servlet-api</artifactId>
 			<version>7.0.62</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<!--MongoBD-Spring整合 -->
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.14.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>1.10.7.RELEASE</version>
 		</dependency>
 
 
