图书管理使用从豆瓣爬取的图书信息

--- a/BookStoreManager/src/main/resources/config.properties
+++ b/BookStoreManager/src/main/resources/config.properties
@@ -42,3 +42,21 @@ redis.maxActive=600
 redis.maxWait=1000
 redis.testOnBorrow=true
 redis.testOnReturn=true
+
+mongo.hostport=127.0.0.1:27017
+mongo.connectionsPerHost=8
+mongo.threadsAllowedToBlockForConnectionMultiplier=4
+#连接超时时间
+mongo.connectTimeout=1000
+#等待时间
+mongo.maxWaitTime=1500
+#Socket超时时间
+mongo.socketTimeout=1500
+#admin登录信息
+mongo.username=root
+mongo.password=root
+#DataBaseName
+#认证数据库名
+mongo.authenticationDbname=admin
+#要链接的数据库名
+mongo.databaseName=local
