--- a/BookStoreManager/pom.xml
+++ b/BookStoreManager/pom.xml
@@ -20,6 +20,22 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.18</version>
 		</dependency>
+
+		<!--  摄像头调用类 -->
+		<dependency>
+			<groupId>com.github.sarxos</groupId>
+			<artifactId>webcam-capture</artifactId>
+			<version>0.3.12</version>
+		</dependency>
+
+
+		<!-- 百度 OCR Java SDK -->
+		<dependency>
+			<groupId>com.baidu.aip</groupId>
+			<artifactId>java-sdk</artifactId>
+			<version>4.15.1</version>
+		</dependency>
+
 		<!-- 1.Spring核心依赖 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
