--- a/BookStoreManager/pom.xml
+++ b/BookStoreManager/pom.xml
@@ -6,8 +6,10 @@
 	<artifactId>BookStoreManager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<itext.version>7.1.11</itext.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -21,7 +23,7 @@
 			<version>8.0.18</version>
 		</dependency>
 
-		<!--  摄像头调用类 -->
+		<!-- 摄像头调用类 -->
 		<dependency>
 			<groupId>com.github.sarxos</groupId>
 			<artifactId>webcam-capture</artifactId>
@@ -225,6 +227,56 @@
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
 		</dependency>
+		<!-- iText组件 -->
+    <!-- itext7 -->
+    <dependency>
+        <groupId>com.itextpdf</groupId>
+        <artifactId>kernel</artifactId>
+        <version>${itext.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>com.itextpdf</groupId>
+        <artifactId>io</artifactId>
+        <version>${itext.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>com.itextpdf</groupId>
+        <artifactId>layout</artifactId>
+        <version>${itext.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>com.itextpdf</groupId>
+        <artifactId>forms</artifactId>
+        <version>${itext.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>com.itextpdf</groupId>
+        <artifactId>pdfa</artifactId>
+        <version>${itext.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>com.itextpdf</groupId>
+        <artifactId>pdftest</artifactId>
+        <version>${itext.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>com.itextpdf</groupId>
+        <artifactId>font-asian</artifactId>
+        <version>${itext.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.18</version>
+    </dependency>
+
+    <!--itext7 html转pdf用到的包-->
+    <dependency>
+        <groupId>com.itextpdf</groupId>
+        <artifactId>html2pdf</artifactId>
+        <version>3.0.0</version>
+    </dependency>
+
 	</dependencies>
 	<build>
 		<!-- 指定源代码的路径 -->
