--- a/BookStoreManager/pom.xml
+++ b/BookStoreManager/pom.xml
@@ -312,6 +312,12 @@
             <artifactId>hbase-protocol</artifactId>
             <version>${hbase.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- <dependency> <groupId>org.apache.hbase</groupId> <artifactId>hbase-client</artifactId>
             </dependency> <dependency> <groupId>org.apache.hbase</groupId> <artifactId>hbase-server</artifactId>
             </dependency> -->
