系统整合rabbitMQ，添加测试用例

--- a/BookStoreManager/src/main/resources/config.properties
+++ b/BookStoreManager/src/main/resources/config.properties
@@ -16,7 +16,6 @@ maxActive=20
 maxWait=60000
 timeBetweenEvictionRunsMillis=60000
 minEvictableIdleTimeMillis=30000
-validationQuery=SELECT 1
 testWhileIdle=true
 testOnBorrow=true
 testOnReturn=true
@@ -65,3 +64,11 @@ mongo.password=root
 mongo.authenticationDbname=admin
 #要链接的数据库名
 mongo.databaseName=local
+# rabbit ip
+rabbit.host=192.168.15.139
+# rabbit 端口
+rabbit.port=5672
+# rabbit 用户名
+rabbit.username=admin
+# rabbit 密码
+rabbit.password=123
