--- a/BookStoreManager/pom.xml
+++ b/BookStoreManager/pom.xml
@@ -12,6 +12,7 @@
         <itext.version>7.1.11</itext.version>
         <hadoop.version>2.9.2</hadoop.version>
         <hbase.version>0.98.1-hadoop2</hbase.version>
+        <spring.version>4.3.19.RELEASE</spring.version>
     </properties>
     <dependencies>
         <dependency>
@@ -44,29 +45,31 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <!-- spring-jdbc包括了一些如jdbcTemplate的工具类 -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
+
+
         <!-- druid -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -82,17 +85,17 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>4.3.19.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -318,6 +321,14 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>2.1.2.RELEASE</version>
+        </dependency>
+
+
         <!-- <dependency> <groupId>org.apache.hbase</groupId> <artifactId>hbase-client</artifactId>
             </dependency> <dependency> <groupId>org.apache.hbase</groupId> <artifactId>hbase-server</artifactId>
             </dependency> -->
