--- a/BookStoreManager/pom.xml
+++ b/BookStoreManager/pom.xml
@@ -328,7 +328,12 @@
             <version>2.1.2.RELEASE</version>
         </dependency>
 
-
+        <!-- javax mail -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
         <!-- <dependency> <groupId>org.apache.hbase</groupId> <artifactId>hbase-client</artifactId>
             </dependency> <dependency> <groupId>org.apache.hbase</groupId> <artifactId>hbase-server</artifactId>
             </dependency> -->
