--- a/BookStoreManager/src/main/resources/config.properties
+++ b/BookStoreManager/src/main/resources/config.properties
@@ -41,7 +41,7 @@ uploadDirectory=attached
 #redis config
 redis.host=114.116.252.220
 redis.port=6379
-redis.pass=gzcabc123
+redis.pass=
 redis.maxIdle=300
 redis.maxActive=600
 redis.maxWait=1000
